fixed align text of resume disabled education part added information activated hired link(move to top)

--- a/src/app/pages/landing-page/landing-page.component.scss
+++ b/src/app/pages/landing-page/landing-page.component.scss
@@ -268,6 +268,9 @@ background-color: #52b3d9;
   padding: 1em;
   box-shadow: 0 0 8px $font-color-secondary;
 }
+.timeline-content-left{
+  text-align: right;
+}
 .timeline-block:hover .timeline-content, .timeline-block:hover::before {
   color: $font-color-secondary;
   background: forestgreen;
@@ -285,6 +288,9 @@ background-color: #52b3d9;
   padding: 5px 0;
   font-size: 16px;
   background: white;
+}
+.date-left{
+  text-align: left;
 }
 .date:hover{
 color: forestgreen;
